fixed padding on accordion to eliminate white space

--- a/LESS/accordion.less
+++ b/LESS/accordion.less
@@ -1,7 +1,6 @@
 .accordion-wrapper{
   width: 100%;
   min-height: 400px;
-  padding: 20px;
   background-image: linear-gradient(270deg, #ffffff 0%, #e6ffe3 100%);
   margin-top: -20px;
 
